--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>MY First Ever Website</h1>
-    <h3>Look Bro! I Can Commit github.</h3>
+    <h3>Look Bro! I Can push github.</h3>
 </body>
 </html>
