adding a new paragrap with style

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>MY First Ever Website</h1>
     <h3>Look Bro! I Can push github.</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, ad possimus laudantium itaque labore mollitia quaerat omnis consequatur nihil iusto doloremque reiciendis optio consectetur animi molestiae aperiam repellendus unde ipsam, fuga laborum fugit explicabo dolorem vitae architecto. Ad iste consectetur pariatur, corrupti aliquam numquam itaque quidem alias quod commodi magni aperiam reiciendis error cumque recusandae modi sapiente odit dignissimos eaque optio! Maiores aut delectus ea, est nam porro! Expedita accusamus hic dolore architecto voluptatum, animi quidem nostrum eum corporis repellendus! Modi deleniti provident, a aperiam laborum eveniet illo tenetur optio sint culpa impedit quisquam consequuntur accusamus explicabo iste quam commodi.</p>
+    <hr>
+    <p style="border: 2px solid red;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut dolorum nihil quos dignissimos, placeat rem eum numquam ad.</p>
 </body>
 </html>
